# android-api-SecureKeys

./: .gitignore  README.md  build.gradle  circle.yml  dependencies.gradle  gradle.properties  settings.gradle
annotation/src/main/java/com/u/securekeys/annotation/: SecureConfigurations.java
annotation/src/test/java/com/u/securekeys/annotation/: SecureConfigurationsTest.java
core/: build.gradle  proguard-rules.pro
core/src/main/cpp/: CMakeLists.txt  configurations.cpp  configurations.h  extern_consts.h  protocol.h  secure-keys.cpp
core/src/main/cpp/crypto/: crypto_wrapper.cpp  crypto_wrapper.h  sha256.cpp  sha256.h
core/src/main/java/com/u/securekeys/: SecureEnvironment.java
core/src/test/java/com/u/securekeys/: SecureEnvironmentTest.java
plugin/: build.gradle
plugin/src/main/groovy/com/saantiaguilera/securekeys/gradle/: NativePackagerPlugin.groovy
processor/: build.gradle
processor/src/main/java/com/u/securekeys/: Configurations.java  NativeHeaderBuilder.java  SecureKeysProcessor.java
processor/src/main/java/com/u/securekeys/internal/: Configurations.java  Encoder.java  NativeHeaderBuilder.java  Protocol.java  Restrictions.java
processor/src/test/java/com/u/securekeys/: SecureKeysProcessorTest.java
processor/src/test/java/com/u/securekeys/internal/: ConfigurationsTest.java  EncoderTest.java  NativeHeaderBuilderTest.java
processor/src/test/java/com/u/securekeys/mocks/: Mocks.java
testapp/: build.gradle
testapp/libs/: core-release.aar
testapp/src/main/java/com/u/testapp/: MainActivity.java
testapp/src/main/res/values/: strings.xml
